--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <body>
             <h1>
                 This is the h1 section.
+                I want my name here, too.  Matt Ogden
             </h1>
             <footer>
                 This is the footer section. Hello World!
