--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA_Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> MOgden First html ever!</title>
-        <body>
-            <h1>
-                This is the h1 section.
-                I want my name here, too.  Matt Ogden
-            </h1>
-            <footer>
-                This is the footer section. Hello World!
-            </footer>
-        </body>
-    </head>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Matt Ogden's First html ever!</title>
+  </head>
+  <body>
+    <h1>
+      This is the h1 section.<br />
+      I want my name here, too.<br />
+      Matt Ogden
+    </h1>
+    <p>
+      This is the paragraph section.<br />
+      I don't really know what I want to put in this paragraph section. Maybe
+      I'll think of something fun.<br />
+      I am including the picture <strong>below</strong>, because I
+      <em>CAN</em>.<br />
+      Here is a list of favorite activities:<br />
+    </p>
+    <ul>
+      <li>swimming</li>
+      <li>woodworking</li>
+      <li>fiddling with computers and electronic devices</li>
+      <li>cooking</li>
+    </ul>
+    <footer>This is the footer section. Hello World!</footer>
+  </body>
 </html>
