--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       This is the paragraph section.<br />
       I don't really know what I want to put in this paragraph section. Maybe
       I'll think of something fun.<br />
-      I am including the picture <strong>below</strong>, because I
+      (<em>Please be nice to those of us who need to work on Saturdays.</em>) I
+      am including the picture <strong>below</strong>, because I
       <em>CAN</em>.<br />
       Here is a list of favorite activities:<br />
     </p>
@@ -26,6 +27,7 @@
       <li>fiddling with computers and electronic devices</li>
       <li>cooking</li>
     </ul>
+    <img />
     <footer>This is the footer section. Hello World!</footer>
   </body>
 </html>
