stage pic, tweak txt

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       This is the paragraph section.<br />
       I don't really know what I want to put in this paragraph section. Maybe
       I'll think of something fun.<br />
-      (<em>Please be nice to those of us who need to work on Saturdays.</em>) I
-      am including the picture <strong>below</strong>, because I
+      (<em>Please be nice to those of us who need to work on Saturdays.</em
+      ><br />
+      I am including the picture <strong>below</strong>, because I
       <em>CAN</em>.<br />
       Here is a list of favorite activities:<br />
     </p>
@@ -27,7 +28,10 @@
       <li>fiddling with computers and electronic devices</li>
       <li>cooking</li>
     </ul>
-    <img />
+    <img
+      src="https://github.com/mogdenmogden/wdd130/blob/main/images/mro_profile_pic.jpg"
+      alt="This is my profile picture."
+    />
     <footer>This is the footer section. Hello World!</footer>
   </body>
 </html>
