--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       I don't really know what I want to put in this paragraph section. Maybe
       I'll think of something fun.<br />
       (<em>Please be nice to those of us who need to work on Saturdays.</em
-      ><br />
+      >)<br />
       I am including the picture <strong>below</strong>, because I
       <em>CAN</em>.<br />
       Here is a list of favorite activities:<br />
@@ -28,10 +28,7 @@
       <li>fiddling with computers and electronic devices</li>
       <li>cooking</li>
     </ul>
-    <img
-      src="https://github.com/mogdenmogden/wdd130/blob/main/images/mro_profile_pic.jpg"
-      alt="This is my profile picture."
-    />
+    <img src="mro_profile_pic.jpg" alt="This is my profile picture." />
     <footer>This is the footer section. Hello World!</footer>
   </body>
 </html>
