--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
       <li>fiddling with computers and electronic devices</li>
       <li>cooking</li>
     </ul>
-    <img src="mro_profile_pic.jpg" alt="This is my profile picture." />
+    <img
+      src="C:\Users\Matt O\Desktop\SCHOOL\wdd130\images\mro_profile_pic.jpg"
+      alt="This is my profile picture."
+    />
     <footer>This is the footer section. Hello World!</footer>
   </body>
 </html>
