--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <li>cooking</li>
     </ul>
     <img
-      src="C:\Users\Matt O\Desktop\SCHOOL\wdd130\images\mro_profile_pic.jpg"
-      alt="This is my profile picture."
+      src="images/mro_profile_pic.jpg"
+      alt="This is my profile picture. I copied the path in github."
     />
     <footer>This is the footer section. Hello World!</footer>
   </body>
