stage then comment then commit then push

--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
       This is the paragraph section.<br />
       I don't really know what I want to put in this paragraph section. Maybe
       I'll think of something fun.<br />
-      (<em>Please be nice to those of us who need to work on Saturdays.</em
+      (<em
+        >Sorry, I need to work on Saturdays. I'll do my best to front-load the
+        process.</em
       >)<br />
+      Your Tuesday lab this week was
+      <strong><em>very</em></strong> helpful.<br />
       I am including the picture <strong>below</strong>, because I
       <em>CAN</em>.<br />
       Here is a list of favorite activities:<br />
     </p>
     <ul>
-      <li>swimming</li>
-      <li>woodworking</li>
-      <li>fiddling with computers and electronic devices</li>
-      <li>cooking</li>
+      <li>Fiddling with computers and electronic devices</li>
+      <li>Cooking</li>
+      <li>Woodworking</li>
+      <li>Cleaning the garage. No, not really.</li>
     </ul>
     <img
       src="images/mro_profile_pic.jpg"
