--- a/siteplan.html
+++ b/siteplan.html
@@ -69,7 +69,7 @@
         <p>
             <ul>
             <li><span style="color:#011627"><strong> Text #011627</strong></span></li>
-            <li><span style="color:#240046"><strong> Links #240046</strong></span></li>
+            <li><span style="color:#450e79"><strong> Links #240046</strong></span></li>
             <li><span style="color:#5f0c16"><strong> Accent1 #e71d36</strong></span></li>
             <li><span style="color:#bd791b"><strong> Accent2 #ff9f1c</strong></span></li>
             <li><span style="color:#1b7c72"><strong> Accent3 #2ec4b6</strong></span></li>
