--- a/siteplan.html
+++ b/siteplan.html
@@ -58,7 +58,7 @@
         <h3>Logo</h3>
         <p>
           <img
-            src="images\excitingexpeditions.bmp"
+            src="images/excitingexpeditions.bmp"
             alt="Exciting Expeditions, LLC Logo"
           />
         </p>
@@ -66,16 +66,35 @@
       <a name="colorscheme"></a>
       <section>
         <h3>Color Scheme</h3>
-        <p>
-            <ul>
-            <li><span style="color:#011627"><strong> Text #011627</strong></span></li>
-            <li><span style="color:#450e79"><strong> Links #240046</strong></span></li>
-            <li><span style="color:#5f0c16"><strong> Accent1 #e71d36</strong></span></li>
-            <li><span style="color:#bd791b"><strong> Accent2 #ff9f1c</strong></span></li>
-            <li><span style="color:#1b7c72"><strong> Accent3 #2ec4b6</strong></span></li>
-            <li><span style="color:#979996"><strong> Background #fdfffc</strong></span></li>
-            </ul>
-        </p>
+
+        <ul>
+          <li>
+            <span style="color: #011627"><strong> Text #011627</strong></span>
+          </li>
+          <li>
+            <span style="color: #450e79"><strong> Links #240046</strong></span>
+          </li>
+          <li>
+            <span style="color: #5f0c16"
+              ><strong> Accent1 #e71d36</strong></span
+            >
+          </li>
+          <li>
+            <span style="color: #bd791b"
+              ><strong> Accent2 #ff9f1c</strong></span
+            >
+          </li>
+          <li>
+            <span style="color: #1b7c72"
+              ><strong> Accent3 #2ec4b6</strong></span
+            >
+          </li>
+          <li>
+            <span style="color: #979996"
+              ><strong> Background #fdfffc</strong></span
+            >
+          </li>
+        </ul>
       </section>
       <a name="typography"></a>
       <section>
@@ -86,11 +105,16 @@
         </p>
         <p style="font-family: 'Quicksand', sans-serif">
           Regular text:
-          <a href="https://fonts.google.com/specimen/Quicksand" font-size: medium> Quicksand </a>
+          <a
+            href="https://fonts.google.com/specimen/Quicksand"
+            font-size:
+            medium
+          >
+            Quicksand
+          </a>
         </p>
       </section>
     </main>
     <footer></footer>
   </body>
 </html>
-  
