--- a/siteplan.html
+++ b/siteplan.html
@@ -99,19 +99,13 @@
       <a name="typography"></a>
       <section>
         <h3>Typography</h3>
-        <p style="font-family: 'Oswald', sans-serif" font-size: x-large>
+        <p style="font-family: 'Oswald', sans-serif">
           Headings:
           <a href="https://fonts.google.com/specimen/Oswald"> Oswald </a>
         </p>
         <p style="font-family: 'Quicksand', sans-serif">
           Regular text:
-          <a
-            href="https://fonts.google.com/specimen/Quicksand"
-            font-size:
-            medium
-          >
-            Quicksand
-          </a>
+          <a href="https://fonts.google.com/specimen/Quicksand"> Quicksand </a>
         </p>
       </section>
     </main>
