adding needed elements per B comment

--- a/siteplan.html
+++ b/siteplan.html
@@ -41,6 +41,16 @@
           This website is meant to advertise the tour guide services, to
           schedule river running experiences, to provide information to prepare
           river-runners, and to handle customer questions.
+          It will provide answers to questions our customers have, such as: 
+          <ul>
+            <li>"Why might I want to try a river expedition?"</li>
+            <li>"What rivers may I travel down?"</li>
+            <li>"What river running packages are available?"</li>
+            <li>"What gear is provided on my expedition and what else might I need or like to have?"</li>
+            <li>"What should I do to prepare for my expedition?"</li>
+            <li>"What are the risks of river-running?</li>
+          </ul>
+           
         </p>
       </section>
       <a name="targetaudience"></a>
@@ -109,6 +119,6 @@
         </p>
       </section>
     </main>
-    <footer></footer>
+    <footer>This is my footer.  Consider placing river sandals here.  No smelly socks allowed.</footer>
   </body>
 </html>
