more changes to remedy omissions

--- a/siteplan.html
+++ b/siteplan.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Quicksand:wght@300&display=swap");
     </style>
     <title>Site Plan for Exciting Expeditions, LLC</title>
     <meta
-      name="Description"
+      name="description"
       content="This is a site plan for the Exciting Expeditions, LLC website."
     />
   </head>
@@ -38,20 +38,27 @@
       <section>
         <h3>Site Purpose and Goals</h3>
         <p>
-          This website is meant to advertise the tour guide services, to
-          schedule river running experiences, to provide information to prepare
-          river-runners, and to handle customer questions.
-          It will provide answers to questions our customers have, such as: 
-          <ul>
-            <li>"Why might I want to try a river expedition?"</li>
-            <li>"What rivers may I travel down?"</li>
-            <li>"What river running packages are available?"</li>
-            <li>"What gear is provided on my expedition and what else might I need or like to have?"</li>
-            <li>"What should I do to prepare for my expedition?"</li>
-            <li>"What are the risks of river-running?</li>
-          </ul>
-           
+          This website is meant to advertise the tour guide services, announce
+          expedition packages and pricing, to schedule river running
+          expeditions, to provide information to prepare river-runners, and to
+          handle customer questions. Customers may ask questions by entering
+          into direct communication with staff. This website will provide
+          answers to common questions our customers have, such as:
         </p>
+        <ul>
+          <li>"Why might I want to try a river expedition?"</li>
+          <li>"What rivers may I travel down?"</li>
+          <li>"What river running packages are available?"</li>
+          <li>"How much will this cost?"</li>
+          <li>"What kinds of payment are accepted?"</li>
+          <li>"What will the weather be like during my expedition?"</li>
+          <li>
+            "What gear is provided on my expedition and what else might I need
+            or like to have?"
+          </li>
+          <li>"What should I do to prepare for my expedition?"</li>
+          <li>"What are the risks of river-running?"</li>
+        </ul>
       </section>
       <a name="targetaudience"></a>
       <section>
@@ -119,6 +126,9 @@
         </p>
       </section>
     </main>
-    <footer>This is my footer.  Consider placing river sandals here.  No smelly socks allowed.</footer>
+    <footer>
+      This is the footer. Consider placing river sandals here. No smelly socks
+      allowed. © 2021 Exciting Expeditions, LLC
+    </footer>
   </body>
 </html>
