--- a/siteplan.html
+++ b/siteplan.html
@@ -64,10 +64,10 @@
       <section>
         <h3>Target Audience</h3>
         <p>
-          The target audience is vacationers and adventure seekers of all ages
-          and all skill levels. It is meant to provide a broad range of
-          experiences, from comfortable catered trips to rough and rugged
-          expeditions.
+          The target audience includes but is not limited to vacationers and
+          adventure seekers of all ages and all skill levels. It is meant to
+          provide a broad range of experiences, from comfortable catered trips
+          to rough and rugged expeditions.
         </p>
       </section>
       <a name="logo"></a>
