chage sitemap foot

--- a/wireframe-example.html
+++ b/wireframe-example.html
@@ -113,7 +113,7 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       </section>
       <section class="foot_block">
-        <h3>Contact Info</h3>
+        <h3>Site Map</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       </section>
       <section class="foot_block">
