--- a/wireframe-example.html
+++ b/wireframe-example.html
@@ -42,64 +42,80 @@
             src="https://placeimg.com/50/50/nature"
             alt="placeholder for the 1st thingie"
           />
-          <figcaption>Product 1</figcaption>
-          <p>describe the 1st thingie</p>
+          <figcaption>
+            Product 1
+            <div>describe the 1st thingie</div>
+          </figcaption>
         </figure>
         <figure class="product">
           <img
             src="https://placeimg.com/50/50/nature"
             alt="placeholder for the 2nd thingie"
           />
-          <figcaption>Product 2</figcaption>
-          <p>describe the 2nd thingie</p>
+          <figcaption>
+            Product 2
+            <div>describe the 2nd thingie</div>
+          </figcaption>
         </figure>
         <figure class="product">
           <img
             src="https://placeimg.com/50/50/nature"
             alt="placeholder for the 3rd thingie"
           />
-          <figcaption>Product 3</figcaption>
-          <p>describe the 3rd thingie</p>
+          <figcaption>
+            Product 3
+            <div>describe the 3rd thingie</div>
+          </figcaption>
         </figure>
         <figure class="product">
           <img
             src="https://placeimg.com/50/50/nature"
             alt="placeholder for the 4th thingie"
           />
-          <figcaption>Product 4</figcaption>
-          <p>describe the 4th thingie</p>
+          <figcaption>
+            Product 4
+            <div>describe the 4th thingie</div>
+          </figcaption>
         </figure>
         <figure class="product">
           <img
             src="https://placeimg.com/50/50/nature"
             alt="placeholder for the 5th thingie"
           />
-          <figcaption>Product 5</figcaption>
-          <p>describe the 5th thingie</p>
+          <figcaption>
+            Product 5
+            <div>describe the 5th thingie</div>
+          </figcaption>
         </figure>
         <figure class="product">
           <img
             src="https://placeimg.com/50/50/nature"
             alt="placeholder for the 6th thingie"
           />
-          <figcaption>Product 6</figcaption>
-          <p>describe the 6th thingie</p>
+          <figcaption>
+            Product 6
+            <div>describe the 6th thingie</div>
+          </figcaption>
         </figure>
         <figure class="product">
           <img
             src="https://placeimg.com/50/50/nature"
             alt="placeholder for the 7th thingie"
           />
-          <figcaption>Product 7</figcaption>
-          <p>describe the 7th thingie</p>
+          <figcaption>
+            Product 7
+            <div>describe the 7th thingie</div>
+          </figcaption>
         </figure>
         <figure class="product">
           <img
             src="https://placeimg.com/50/50/nature"
             alt="placeholder for the 8th thingie"
           />
-          <figcaption>Product 8</figcaption>
-          <p>describe the 8th thingie</p>
+          <figcaption>
+            Product 8
+            <div>describe the 8th thingie</div>
+          </figcaption>
         </figure>
       </div>
     </main>
@@ -118,19 +134,30 @@
       </section>
       <section class="foot_block">
         <h3>Social Icons</h3>
-        <p>
-            <ul>
-                <li>
-                    <a href="#"><img src="https://placeimg.com/10/10/nature" alt="Social Media 1"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="https://placeimg.com/10/10/nature" alt="Social Media 2"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="https://placeimg.com/10/10/nature" alt="Social Media 3"></a>
-                </li>
-            </ul>
-        </p>
+
+        <ul>
+          <li>
+            <a href="#"
+              ><img
+                src="https://placeimg.com/10/10/nature"
+                alt="Social Media 1"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="https://placeimg.com/10/10/nature"
+                alt="Social Media 2"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="https://placeimg.com/10/10/nature"
+                alt="Social Media 3"
+            /></a>
+          </li>
+        </ul>
       </section>
     </footer>
   </body>
