--- a/week3/index.html
+++ b/week3/index.html
@@ -8,7 +8,7 @@
     <meta name="instructor" content="J. Blazzard" />
     <meta
       name="description"
-      content="This is the WDD130 W03 Wireframe Assignment"
+      content="This is the WDD130 W03 Wireframe Assignment."
     />
     <title>W03 Wireframe Assignment, Matt Ogden WDD130 Blazzard</title>
   </head>
@@ -17,7 +17,7 @@
       <nav>
         <a href="index.html"
           ><img
-            src="https://placeimg.com/100/100/tech"
+            src="https://placeimg.com/80/80/tech"
             alt="This is the placeholder for the header logo."
         /></a>
         <ul>
@@ -31,7 +31,7 @@
     <main>
       <div class="hero-image">
         <img
-          src="https://placeimg.com/600/50/tech"
+          src="https://placeimg.com/800/200/tech"
           alt="This is the hero-image at the top of the Main section."
         />
       </div>
@@ -43,7 +43,7 @@
           aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
           reprehenderit, quidem corrupti eligendi.
         </p>
-        <img src="https://placeimg.com/100/100/tech" alt="We run to relax." />
+        <img src="https://placeimg.com/300/500/tech" alt="We run to relax." />
       </section>
       <section>
         <h1>We run whitewater for the rush</h1>
@@ -53,7 +53,7 @@
           aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
           reprehenderit, quidem corrupti eligendi.
         </p>
-        <img src="https://placeimg.com/100/100/tech" alt="We run to relax." />
+        <img src="https://placeimg.com/300/500/tech" alt="We run to relax." />
       </section>
       <section class="invitation">
         <h1>Come run with us!</h1>
@@ -71,13 +71,13 @@
     <footer>
       <div><h3>© 2021 Dry Oar - Matt Ogden - WDD 130-14</h3></div>
       <div>
-        <img src="https://placeimg.com/20/20/tech" alt="footer image 1" />
+        <img src="https://placeimg.com/40/40/tech" alt="footer image 1" />
       </div>
       <div>
-        <img src="https://placeimg.com/20/20/tech" alt="footer image 1" />
+        <img src="https://placeimg.com/40/40/tech" alt="footer image 1" />
       </div>
       <div>
-        <img src="https://placeimg.com/20/20/tech" alt="footer image 1" />
+        <img src="https://placeimg.com/40/40/tech" alt="footer image 1" />
       </div>
     </footer>
   </body>
