--- a/week3/index.html
+++ b/week3/index.html
@@ -31,7 +31,7 @@
     <main>
       <div class="hero-image">
         <img
-          src="https://placeimg.com/800/200/tech"
+          src="https://placeimg.com/1200/400/nature"
           alt="This is the hero-image at the top of the Main section."
         />
       </div>
@@ -43,7 +43,7 @@
           aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
           reprehenderit, quidem corrupti eligendi.
         </p>
-        <img src="https://placeimg.com/300/500/tech" alt="We run to relax." />
+        <img src="https://placeimg.com/500/300/nature" alt="We run to relax." />
       </section>
       <section>
         <h1>We run whitewater for the rush</h1>
@@ -53,7 +53,7 @@
           aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
           reprehenderit, quidem corrupti eligendi.
         </p>
-        <img src="https://placeimg.com/300/500/tech" alt="We run to relax." />
+        <img src="https://placeimg.com/500/300/nature" alt="We run to relax." />
       </section>
       <section class="invitation">
         <h1>Come run with us!</h1>
