--- a/xweek4/index.html
+++ b/xweek4/index.html
@@ -39,7 +39,7 @@
         <h1>Exciting Expeditions and River Running</h1>
         <div class="top_banner">
           <img
-            src="/week4/images/placeimg_1000_400_streamgreenhill.jpg"
+            src="week4/Images/placeimg_1000_400_streamgreenhill.jpg"
             class="hero_image"
             alt="Oh, the places we will go..."
           />
@@ -53,7 +53,7 @@
             reprehenderit, quidem corrupti eligendi.
           </p>
           <img
-            src="/week4/images/placeimg_500_300_rockystream.jpg"
+            src="week4/Images/placeimg_500_300_rockystream.jpg"
             class="example_image"
             alt="We run to relax."
           />
@@ -67,7 +67,7 @@
             reprehenderit, quidem corrupti eligendi.
           </p>
           <img
-            src="/week4/images/placeimg_500_300_rockystream.jpg"
+            src="week4/Images/placeimg_500_300_rockystream.jpg"
             class="example_image"
             alt="Feel the whitewater rush!"
           />
@@ -92,21 +92,21 @@
         <span class="social">
           <a href="https://facebook.com" target="_blank">
             <img
-              src="/week4/images/facebook.png"
+              src="week4/Images/facebook.png"
               class="social_logo"
               alt="Facebook icon"
             />Facebook
           </a>
           <a href="https://instagram.com" target="_blank">
             <img
-              src="/week4/images/instagram.png"
+              src="week4/Images/instagram.png"
               class="social_logo"
               alt="Instagram icon"
             />Instagram
           </a>
           <a href="https://www.twitter.com" target="_blank">
             <img
-              src="/week4/images/twitter.png"
+              src="week4/Images/twitter.png"
               class="social_logo"
               alt="Twitter icon"
             />Twitter
