--- a/week4/index.html
+++ b/week4/index.html
@@ -16,7 +16,7 @@
     <div class="page">
       <header>
         <img
-          src="/week4/Images/excitingexpeditions.bmp"
+          src="excitingexpeditions.bmp"
           class="logo"
           alt="This is the placeholder for the header logo."
         />
