--- a/week4/index.html
+++ b/week4/index.html
@@ -16,9 +16,10 @@
     <div class="page">
       <header>
         <img
-          src="/week4/images/excitingexpeditions.bmp"
+          src="../images/excitingexpeditions.bmp"
           class="logo"
-          alt="This is the placeholder for the header logo."
+          alt="This is the
+        placeholder for the header logo."
         />
         <nav>
           <ul>
@@ -39,7 +40,7 @@
         <h1>Exciting Expeditions and River Running</h1>
         <div class="top_banner">
           <img
-            src="/week4/images/placeimg_1000_400_streamgreenhill.jpg"
+            src="../images/placeimg_1000_400_streamgreenhill.jpg"
             class="hero_image"
             alt="Oh, the places we will go..."
           />
@@ -53,7 +54,7 @@
             reprehenderit, quidem corrupti eligendi.
           </p>
           <img
-            src="/week4/images/placeimg_500_300_rockystream.jpg"
+            src="../images/placeimg_500_300_rockystream.jpg"
             class="example_image"
             alt="We run to relax."
           />
@@ -67,7 +68,7 @@
             reprehenderit, quidem corrupti eligendi.
           </p>
           <img
-            src="/week4/images/placeimg_500_300_rockystream.jpg"
+            src="../images/placeimg_500_300_rockystream.jpg"
             class="example_image"
             alt="Feel the whitewater rush!"
           />
@@ -92,21 +93,22 @@
         <span class="social">
           <a href="https://facebook.com" target="_blank">
             <img
-              src="/week4/images/facebook.png"
+              src="../images/facebook.png"
               class="social_logo"
               alt="Facebook icon"
             />Facebook
           </a>
           <a href="https://instagram.com" target="_blank">
             <img
-              src="/week4/images/instagram.png"
+              src="../images/instagram.png"
               class="social_logo"
-              alt="Instagram icon"
+              alt="Instagram
+            icon"
             />Instagram
           </a>
           <a href="https://www.twitter.com" target="_blank">
             <img
-              src="/week4/images/twitter.png"
+              src="../images/twitter.png"
               class="social_logo"
               alt="Twitter icon"
             />Twitter
