--- a/rafting/siteplan.html
+++ b/rafting/siteplan.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Quicksand:wght@300&display=swap");
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Open+Sans:wght@300;400&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
     <title>Site Plan for Exciting Expeditions, LLC</title>
     <meta
       name="description"
@@ -86,29 +87,29 @@
 
         <ul>
           <li>
-            <span style="color: #3a001e"><strong> Text #3a001e</strong></span>
+            <span style="color: #434656"><strong> Text #434656</strong></span>
           </li>
           <li>
-            <span style="color: #005f00"><strong> Links #005f00</strong></span>
+            <span style="color: #002587"><strong> Links #002587</strong></span>
           </li>
           <li>
-            <span style="color: #ef3c2d"
-              ><strong> Accent1 #e71d36</strong></span
+            <span style="color: #b6003e"
+              ><strong> Accent1 #b6003e</strong></span
             >
           </li>
           <li>
-            <span style="color: #0087ff"
-              ><strong> Accent2 #ff9f1c</strong></span
+            <span style="color: #ffc864"
+              ><strong> Accent2 #ffc864</strong></span
             >
           </li>
           <li>
             <span style="color: #009e36"
-              ><strong> Accent3 #2ec4b6</strong></span
+              ><strong> Accent3 #009e36</strong></span
             >
           </li>
           <li>
-            <span style="color: #fff5f0"
-              ><strong> Background #fff5f0</strong></span
+            <span style="color: #f4f4f5; background-color: #002587"
+              ><strong> Background #f4f4f5</strong></span
             >
           </li>
         </ul>
@@ -116,13 +117,13 @@
       <a name="typography"></a>
       <section>
         <h3>Typography</h3>
-        <p style="font-family: 'Oswald', sans-serif">
+        <p style="font-family: 'IM Fell English SC', serif">
           Headings:
-          <a href="https://fonts.google.com/specimen/Oswald"> Oswald </a>
+          <a> IM Fell English SC </a>
         </p>
-        <p style="font-family: 'Quicksand', sans-serif">
+        <p style="font-family: 'Open Sans', sans-serif">
           Regular text:
-          <a href="https://fonts.google.com/specimen/Quicksand"> Quicksand </a>
+          <a> Open Sans, sans-serif </a>
         </p>
       </section>
     </main>
