--- a/rafting/index.html
+++ b/rafting/index.html
@@ -11,6 +11,18 @@
     />
     <title>Exciting Expeditions River Running</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Open+Sans:wght@300;400&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <!-- font-family: 'IM Fell English SC', serif;
+
+    font-family: 'Open Sans', sans-serif;
+
+    font-family: 'Pacifico', cursive;
+ -->
   </head>
   <body>
     <div class="page">
