--- a/rafting/index.html
+++ b/rafting/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#002587" />
     <meta name="instructor" content="J. Blazzard" />
     <meta
       name="description"
@@ -28,7 +29,7 @@
     <div class="page">
       <header>
         <img
-          src="../images/excitingexpeditions.bmp"
+          src="../rafting/images/excitingexpeditions.bmp"
           class="logo"
           alt="This is the
         placeholder for the header logo."
@@ -52,13 +53,13 @@
         <h1>Exciting Expeditions and River Running</h1>
         <div class="top_banner">
           <img
-            src="../images/placeimg_1000_400_streamgreenhill.jpg"
+            src="../rafting/images/river_aerial4.jpg"
             class="hero_image"
             alt="Oh, the places we will go..."
           />
         </div>
         <section>
-          <h2>We run rivers to relax</h2>
+          <h2>We run rivers to relax.</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Exercitationem at fuga nulla saepe laboriosam est magni aspernatur
@@ -66,13 +67,13 @@
             reprehenderit, quidem corrupti eligendi.
           </p>
           <img
-            src="../images/placeimg_500_300_rockystream.jpg"
+            src="../rafting/images/river_relax2_640-896.jpg"
             class="example_image"
             alt="We run to relax."
           />
         </section>
         <section>
-          <h2>We run whitewater for the rush</h2>
+          <h2>We run whitewater for the rush!</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Exercitationem at fuga nulla saepe laboriosam est magni aspernatur
@@ -80,7 +81,7 @@
             reprehenderit, quidem corrupti eligendi.
           </p>
           <img
-            src="../images/placeimg_500_300_rockystream.jpg"
+            src="../rafting/images/orange_raft_splash_640x426.jpg"
             class="example_image"
             alt="Feel the whitewater rush!"
           />
@@ -90,8 +91,7 @@
           <p>
             We invite you to come relax with us on one of the amazing rivers we
             visit.
-          </p>
-          <p>
+            <br />
             Check out our trips and let us know which one best suits you. We're
             waiting to hear from you!
           </p>
@@ -99,33 +99,35 @@
       </main>
 
       <footer>
-        <p class="copyright">
-          &copy; 2021 Exciting Expeditions, LLC&nbsp;&nbsp;
-        </p>
-        <span class="social">
-          <a href="https://facebook.com" target="_blank">
-            <img
-              src="../images/facebook.png"
-              class="social_logo"
-              alt="Facebook icon"
-            />Facebook
-          </a>
-          <a href="https://instagram.com" target="_blank">
-            <img
-              src="../images/instagram.png"
-              class="social_logo"
-              alt="Instagram
-            icon"
-            />Instagram
-          </a>
-          <a href="https://www.twitter.com" target="_blank">
-            <img
-              src="../images/twitter.png"
-              class="social_logo"
-              alt="Twitter icon"
-            />Twitter
-          </a>
-        </span>
+        <div class="social">
+          <p class="copyright">
+            &copy; 2021 Exciting Expeditions, LLC&nbsp;&nbsp;
+          </p>
+          <p class="pfoot1">
+            <a href="https://facebook.com" target="_blank">
+              <img
+                src="../rafting/images/facebook.png"
+                class="social_logo"
+                alt="Facebook icon"
+              />Facebook
+            </a>
+            <a href="https://instagram.com" target="_blank">
+              <img
+                src="../rafting/images/instagram.png"
+                class="social_logo"
+                alt="Instagram
+              icon"
+              />Instagram
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+              <img
+                src="../rafting/images/twitter.png"
+                class="social_logo"
+                alt="Twitter icon"
+              />Twitter
+            </a>
+          </p>
+        </div>
       </footer>
     </div>
   </body>
