--- a/rafting/bkup_index.html
+++ b/rafting/bkup_index.html
@@ -25,7 +25,6 @@
     font-family: 'Pacifico', cursive;
  -->
   </head>
-
   <body>
     <div class="page">
       <header>
@@ -51,42 +50,41 @@
 
       <main>
         <div class="top_banner">
-          <button>Let's Go!</button>
+          <button>Exciting Expeditions and River Running</button>
           <img
             src="../rafting/images/river_aerial4.jpg"
             class="hero_image"
             alt="Oh, the places we will go..."
           />
         </div>
-        <section class="relax">
-          <h2>We run rivers to relax.</h2>
+        <section>
+          <h2 class="relax">We run rivers to relax.</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Exercitationem at fuga nulla saepe laboriosam est magni aspernatur
             aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
             reprehenderit, quidem corrupti eligendi.
           </p>
+          <img
+            src="../rafting/images/river_relax2_640-896.jpg"
+            class="example_image"
+            alt="We run to relax."
+          />
         </section>
-        <img
-          src="../rafting/images/river_relax2_640-896.jpg"
-          class="relax_image"
-          alt="We run to relax."
-        />
-        <img
-          src="../rafting/images/orange_raft_splash_640x426.jpg"
-          class="rush_image"
-          alt="Feel the whitewater rush!"
-        />
-        <section class="rush">
-          <h2>We run whitewater for the rush!</h2>
+        <section>
+          <h2 class="rush">We run whitewater for the rush!</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Exercitationem at fuga nulla saepe laboriosam est magni aspernatur
             aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
             reprehenderit, quidem corrupti eligendi.
           </p>
+          <img
+            src="../rafting/images/orange_raft_splash_640x426.jpg"
+            class="example_image"
+            alt="Feel the whitewater rush!"
+          />
         </section>
-
         <section class="invitation">
           <h2>Come run with us!</h2>
           <p>
