change css source

--- a/final_project/fp-siteplan.html
+++ b/final_project/fp-siteplan.html
@@ -11,7 +11,7 @@
       content="A personal account of the knives I own and how they came into my posession."
     />
     <title>The Story of My Knives</title>
-    <link rel="stylesheet" href="../final_project/css/fp_style.css" />
+    <link rel="stylesheet" href="css/fp_style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
