--- a/final_project/fp-siteplan.html
+++ b/final_project/fp-siteplan.html
@@ -44,15 +44,16 @@
       <section>
         <h3>Site Purpose and Goals</h3>
         <p>
-          I've liked knives since I received my first pocket knife as a Cub<br>
-          Scout on my 8th birthday. Over the years I have casually collected<br>
-          many knives. Some were gifts, others purchased or found. Each knife<br>
-          has a story behind it. I want to tell their stories. I will showcase<br>
-          my favorite knives and tell you what I like about each. <br>
-          Would you like to see a few? 
-          <br><br>
-          This website will provide information and stories behind
-          my favorite knives, such as:
+          I've liked knives since I received my first pocket knife as a Cub<br />
+          Scout on my 8th birthday. Over the years I have casually collected<br />
+          many knives. Some were gifts, others purchased or found. Each knife<br />
+          has a story behind it. I want to tell their stories. I will
+          showcase<br />
+          my favorite knives and tell you what I like about each. <br />
+          Would you like to see a few?
+          <br /><br />
+          This website will provide information and stories behind my favorite
+          knives, such as:
         </p>
         <ul>
           <li>
@@ -70,22 +71,20 @@
       <a name="targetaudience"></a>
       <section>
         <h3>Target Audience</h3>
-        <p>
-          The target audience includes but is not limited to:
-          <ul>
-              <li>knife enthusiasts</li>
-              <li>campers</li>
-              <li>scouts</li>
-              <li>personal history enthusiasts</li>
-              <li>my mother</li>
-          </ul> 
-        </p>
+        <p>The target audience includes but is not limited to:</p>
+        <ul>
+          <li>knife enthusiasts</li>
+          <li>campers</li>
+          <li>scouts</li>
+          <li>personal history enthusiasts</li>
+          <li>my mother</li>
+        </ul>
       </section>
       <a name="logo"></a>
       <section>
         <h3>Logo or Unifying Interest Image</h3>
         <p>
-          <img src="..\final_project\fp_images\knife_400x600.jpg" alt="The Story of My Knives" />
+          <img src="fp_images/knife_400x600.jpg" alt="The Story of My Knives" />
         </p>
       </section>
       <a name="colorscheme"></a>
@@ -93,41 +92,34 @@
         <h3>Color Scheme</h3>
         <ul class="color_ul">
           <li class="color_li">
-            <span>Text #001524
+            <cite
+              >Text #001524
               <button class="text1"></button>
-            </span>
+            </cite>
           </li>
           <li class="color_li">
-            <span>Color1 #15616d
-                <button class="color1"></button></span>
+            <cite>Color1 #15616d <button class="color1"></button></cite>
           </li>
           <li class="color_li">
-            <span>Color2 #368f8b
-                <button class="color2"></button></span>
+            <cite>Color2 #368f8b <button class="color2"></button></cite>
           </li>
           <li class="color_li">
-            <span>Color3 #ff7d00
-                <button class="color3"></button></span>
+            <cite>Color3 #ff7d00 <button class="color3"></button></cite>
           </li>
           <li class="color_li">
-            <span>Color4 #78290f
-                <button class="color4"></button></span>
+            <cite>Color4 #78290f <button class="color4"></button></cite>
           </li>
           <li class="color_li">
-            <span>Accent1 #e63946
-                <button class="accent1"></button></span>
+            <cite>Accent1 #e63946 <button class="accent1"></button></cite>
           </li>
           <li class="color_li">
-            <span">Accent2 #a8dadc
-                <button class="accent2"></button></span>
+            <cite>Accent2 #a8dadc <button class="accent2"></button></cite>
           </li>
           <li class="color_li">
-            <span>Accent3 #5f0f40
-                <button class="accent3"></button></span>
+            <cite>Accent3 #5f0f40 <button class="accent3"></button></cite>
           </li>
           <li class="color_li">
-            <span>Background #f1faee
-                <button class="bkgrnd"></button></span>
+            <cite>Background #f1faee <button class="bkgrnd"></button></cite>
           </li>
         </ul>
       </section>
@@ -136,16 +128,17 @@
         <h3>Typography</h3>
         <p>
           Headings:
-          <button class="font1"> IM Fell English SC </button>
+          <button class="font1">IM Fell English SC</button>
         </p>
         <p>
           Regular text:
-          <button class="font2"> Open Sans, sans-serif </button>
+          <button class="font2">Open Sans, sans-serif</button>
         </p>
       </section>
     </main>
     <footer>
-      This is the footer. Consider a sasquatch in this space. &copy 2021 Matt Ogden
+      This is the footer. Consider a sasquatch in this space. &copy; 2021 Matt
+      Ogden
     </footer>
   </body>
 </html>
