--- a/final_project/fp-siteplan.html
+++ b/final_project/fp-siteplan.html
@@ -28,6 +28,7 @@
       <ul>
         <li><a href="#sitename">Site Name</a></li>
         <li><a href="#purpose">Site Purpose and Goals</a></li>
+        <li><a href="#sitemap">Site Map</a></li>
         <li><a href="#targetaudience">Target Audience</a></li>
         <li><a href="#logo">Logo</a></li>
         <li><a href="#colorscheme">Color Scheme</a></li>
@@ -35,12 +36,24 @@
       </ul>
     </nav>
     <main>
-      <a name="sitename"></a>
+      <a id="sitename"></a>
       <section>
         <h3>Site Name</h3>
         <p>The Story of My Knives</p>
       </section>
-      <a name="purpose"></a>
+      <a id="sitemap"></a>
+      <section>
+        <h3>Site Map</h3>
+        <ul>
+          <li>Introduction: (As stated below in the Site Purpose and Goals.) I will also introduce myself.  I am a middle aged, happily married father of four, working in the healthcare informatics workspace. I grew up carrying and using knives as often as possible.  I've casually built a collection of knifes.</li>
+          <li>I like certain knives more than others.  Some styles really speak to my personal aesthetic.  I hold a deep appreciation for knives as a tool in everyday life, as well as camping and other outdoors activities.  I have a very frugal perspective when it comes to knife ownership:  I favor models that are easily affordable.  I appreciate beauty in the form knifemakers give to their creations. I value knives that are durable, useful, and designed with more than current fashion in mind.  While I appreciate inexpensive knives, I also avoid those that clearly are a waste of time and money.</li>
+          <li>I will begin each knife feature with a profile.  This will include a picture of the knife, size, configuration, and other details describing the knife.</li>
+          <li>The primary information I want to convey is a story about each knife I own.  I will tell the reader how and when I got each knife, what I like about each, and how I like to use this knife. I will include details from the history of my ownership of each example.</li>
+          <li>Generally, I will provide information on caring for a knife, safety rules, and how to sharpen a knife.</li>
+          <li>I may also suggest things the reader may appreciate if they consider owning a knife like mine.  This portion of the narrative may or may not include links to current purchase options or to similarly configured knives.</li>
+        </ul>
+      </section>
+      <a id="purpose"></a>
       <section>
         <h3>Site Purpose and Goals</h3>
         <p>
@@ -68,7 +81,7 @@
           <li>"What are your thoughts on how much to spend on a knife?"</li>
         </ul>
       </section>
-      <a name="targetaudience"></a>
+      <a id="targetaudience"></a>
       <section>
         <h3>Target Audience</h3>
         <p>The target audience includes but is not limited to:</p>
@@ -80,14 +93,17 @@
           <li>my mother</li>
         </ul>
       </section>
-      <a name="logo"></a>
-      <section>
-        <h3>Logo or Unifying Interest Image</h3>
-        <p>
-          <img src="fp_images/knife_400x600.jpg" alt="The Story of My Knives" />
-        </p>
+      <a id="logo"></a>
+      <section >
+        <h3 >Logo & Images
+          <span class=images>
+            <img  class=pic src="fp_images/first_knife.jpg" alt="My first knife." />
+            <img  class=pic src="fp_images/test_EDC_600x400.jpg" alt="The knife I carry." />
+            <img class=pic src="fp_images/knife_400x600.jpg" alt="The Story of My Knives" />
+          </span>
+        </h3>
       </section>
-      <a name="colorscheme"></a>
+      <a id="colorscheme"></a>
       <section>
         <h3>Color Scheme</h3>
         <ul class="color_ul">
@@ -123,7 +139,7 @@
           </li>
         </ul>
       </section>
-      <a name="typography"></a>
+      <a id="typography"></a>
       <section>
         <h3>Typography</h3>
         <p>
